fix hamburger covering chapter num

--- a/watson/src/book/templates/styles.css
+++ b/watson/src/book/templates/styles.css
@@ -352,6 +352,8 @@ code .comment {
     transform: translateX(-100%);
     transition: transform 0.2s ease;
     z-index: 100;
+
+    padding-top: 68px;
   }
 
   .nav.open {
